started all templates data page

--- a/src/components/modules/admin/templatesAllTemplatesData/index.scss
+++ b/src/components/modules/admin/templatesAllTemplatesData/index.scss
@@ -1,3 +1,5 @@
+here's the most recent css, i updated it, see it here
+```
 $section-heading-border-color: #f0ecf5;
 $border-buttom: 1px solid $section-heading-border-color;
 
@@ -75,3 +77,6 @@ $border-buttom: 1px solid $section-heading-border-color;
     }
   }
 }
+```
+
+wait let me tell you what next to do 
