--- a/src/components/modules/admin/businessIndex/index.scss
+++ b/src/components/modules/admin/businessIndex/index.scss
@@ -1,4 +1,6 @@
 //@use 'tablestyles';
+@import '../../../../assets/styles/mixins.scss';
+@import '../../../../assets/styles/admin.scss';
 
 @import '../../../../assets/styles/_tablestyles.scss';
 
