--- a/src/components/modules/admin/templatesAll/index.scss
+++ b/src/components/modules/admin/templatesAll/index.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/styles/mixins.scss';
+@import '../../../../assets/styles/admin.scss';
 @import '../../../../assets/styles/_tablestyles.scss';
 
 .search-bar {
