--- a/src/components/modules/admin/dashboard/index.scss
+++ b/src/components/modules/admin/dashboard/index.scss
@@ -1,7 +1,6 @@
-//@use 'tablestyles';
-
+@import '../../../../assets/styles/mixins.scss';
 @import '../../../../assets/styles/_tablestyles.scss';
-
+@import '../../../../assets/styles/admin.scss';
 .main-content {
   //overflow: scroll;
 }
@@ -26,6 +25,16 @@
       margin-right: 0;
     }
   }
+  .card-container {
+    .statistics-card {
+      .card {
+        .value {
+          font-size: 23px;
+          font-weight: 700;
+        }
+      }
+    }
+  }
 }
 
 .table-section {
@@ -42,6 +51,7 @@
 
   .striped-table {
     @extend %striped-table;
+
     thead {
       @extend %table-data-styles;
     }
