--- a/src/components/modules/admin/layout/header/index.scss
+++ b/src/components/modules/admin/layout/header/index.scss
@@ -1,6 +1,7 @@
 // .main-content {
 //   width: 80%;
 //   padding: 20px;
+@import '../../../../../assets/styles/mixins.scss';
 
 .header {
   display: flex;
@@ -22,13 +23,13 @@
       background-color: #f9fafa;
       border: 1px solid #bcc6cc26;
       margin-right: 48px;
-      padding: 10px;
+      padding: 10px 2rem;
       width: 100%;
       display: flex;
       border-radius: 4px;
       .search-bar {
         margin-right: 20px;
-        padding: 5px;
+        padding: 0.1rem;
         background-color: #f9fafa;
       }
     }
@@ -36,7 +37,7 @@
     .profile {
       display: flex;
       align-items: center;
-      gap: 1.2rem;
+      gap: 0.7rem;
 
       .notification-icon {
         margin-right: 20px;
@@ -45,13 +46,15 @@
         border-radius: 50%;
         background-color: #f2b3001a;
         padding: 10px;
+        width: 2.6875rem;
+        height: 2.6875rem;
       }
 
       .user-icon {
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        background-color: #3498db;
+        background-color: #00b8bf;
         color: #fff;
         display: flex;
         align-items: center;
