--- a/src/components/modules/admin/templatesAllTemplatesData/index.scss
+++ b/src/components/modules/admin/templatesAllTemplatesData/index.scss
@@ -1,3 +1,6 @@
+@import '../../../../assets/styles/mixins.scss';
+@import '../../../../assets/styles/admin.scss';
+
 $section-heading-border-color: #f0ecf5;
 $border-buttom: 1px solid $section-heading-border-color;
 
