--- a/src/assets/styles/_admin.scss
+++ b/src/assets/styles/_admin.scss
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
-%table_icon_styles {
-}
-
 %main-font-family {
   font-family: 'Inter', sans-serif;
 }
@@ -12,6 +9,6 @@
   font-size: 16px;
 }
 
-.table-icons {
-  @extend %table_icon_styles;
-}
+// .table-icons {
+//   @extend %table_icon_styles;
+// }
