--- a/src/components/modules/admin/businessIndex/index.scss
+++ b/src/components/modules/admin/businessIndex/index.scss
@@ -1,8 +1,8 @@
 //@use 'tablestyles';
-@import '../../../../assets/styles/mixins.scss';
-@import '../../../../assets/styles/admin.scss';
 
 @import '../../../../assets/styles/_tablestyles.scss';
+// @import '../../../../assets/styles/mixins.scss';
+// @import '../../../../assets/styles/admin.scss';
 
 .main-content {
   //overflow: scroll;
