--- a/src/assets/styles/_admin.scss
+++ b/src/assets/styles/_admin.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
+$main-font-family: 'Inter', sans-serif;
 %main-font-family {
-  font-family: 'Inter', sans-serif;
+  font-family: $main-font-family;
 }
 
 .my-element {
