--- a/src/components/modules/admin/templatesAllTemplatesData/index.scss
+++ b/src/components/modules/admin/templatesAllTemplatesData/index.scss
@@ -1,5 +1,5 @@
 @import '../../../../assets/styles/mixins.scss';
-@import '../../../../assets/styles/admin.scss';
+@import '../../../../assets/styles/_admin.scss';
 
 $section-heading-border-color: #f0ecf5;
 $border-buttom: 1px solid $section-heading-border-color;
@@ -50,26 +50,27 @@ $border-buttom: 1px solid $section-heading-border-color;
         background-color: #fff;
 
         p {
+          @extend %accordion_card_content;
           margin: 0.5rem 0;
-          padding: 0.7rem 2rem;
-          display: flex;
-          //  justify-content: space-between;
-          border-bottom: $border-buttom;
+          padding: 1.4rem 2rem;
+
+          display: grid;
+          grid-template-columns: 1fr 1fr;
 
           &:last-child {
             border-bottom: none;
           }
 
           // strong {
-          //   display: inline-flex;
-          //   width: 150px; // adjust width as needed for alignment
-          // }
 
           .card-content-row-value {
-            padding-left: 17.5rem;
+            //  padding-left: 17.5rem;
             @media (max-width: 768px) {
               padding-left: 3rem;
             }
+          }
+          .template-identifier {
+            color: $section-heading-text-color#00b8bf;
           }
         }
       }
