--- a/src/components/modules/admin/templatesDownload/index.scss
+++ b/src/components/modules/admin/templatesDownload/index.scss
@@ -13,68 +13,69 @@ $input-border-radius: 4px;
   $input-padding: 0.7rem 2.4rem;
 }
 // Responsive styles
-@media (max-width: 768px) {
-  .controls {
-    flex-direction: column;
-    align-items: stretch;
-    padding: 0;
+// @media (max-width: 768px) {
+//   .controls {
+//     flex-direction: column;
+//     align-items: stretch;
+//     padding: 0;
 
-    .control-item {
-      margin-bottom: 10px;
-      flex: 1;
-      justify-content: center;
-    }
+//     .control-item {
+//       margin-bottom: 10px;
+//       flex: 1;
+//       justify-content: center;
+//     }
 
-    .search-div {
-      .search-bar {
-        width: 100%;
-        position: relative;
-        input {
-          width: calc(100% - 2.4rem); // Adjust for padding
-          padding-left: 2.5rem; // Adjust padding to accommodate the search icon
-        }
-        .search-icon {
-          position: absolute;
-          left: 0.5rem;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-      }
-    }
+//     .search-div {
+//       .search-bar {
+//         width: 100%;
+//         position: relative;
+//         input {
+//           width: calc(100% - 2.4rem); // Adjust for padding
+//           padding-left: 2.5rem; // Adjust padding to accommodate the search icon
+//         }
+//         .search-icon {
+//           position: absolute;
+//           left: 0.5rem;
+//           top: 50%;
+//           transform: translateY(-50%);
+//         }
+//       }
+//     }
 
-    .filter-dropdown {
-      select {
-        width: 100%;
-      }
-    }
+//     .filter-dropdown {
+//       select {
+//         width: 90%;
+//         margin-left: 1rem;
+//       }
+//     }
 
-    .date-filters {
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
+//     .date-filters {
+//       display: flex;
+//       flex-direction: column;
+//       align-items: center;
 
-      form {
-        width: 100%;
-        position: relative;
-        input {
-          width: 100%; // Adjust for padding
-          padding-left: 2.5rem;
-          margin-bottom: 0.5rem;
-        }
-        .calendar-icon {
-          position: absolute;
-          left: 0.5rem;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-      }
+//       form {
+//         width: 100%;
+//         position: relative;
+//         input {
+//           width: 100%; // Adjust for padding
+//           padding-left: 2.5rem;
+//           margin-bottom: 0.5rem;
+//         }
+//         .calendar-icon {
+//           position: absolute;
+//           left: 0.5rem;
+//           top: 50%;
+//           transform: translateY(-50%);
+//         }
+//       }
 
-      span {
-        display: none; // Hide the separator on small screens
-      }
-    }
-  }
-}
+//       span {
+//         display: none; // Hide the separator on small screens
+//       }
+//     }
+//   }
+// }
 
 * {
   margin: 0;
@@ -84,17 +85,20 @@ $input-border-radius: 4px;
 
 .controls {
   display: flex;
-  justify-content: space-between;
+  //justify-content: start;
+  //align-items: flex-start;
   margin-bottom: 20px;
   //padding: 10px;
   border-radius: 5px;
-
+  flex-wrap: wrap;
+  //padding-right: 2rem;
   .control-item {
     display: flex;
     align-items: center;
+    padding: 0 1rem;
     //margin-right: 0.5rem;
     // display: inline-flex;
-    flex-wrap: wrap-reverse;
+    // flex-wrap: wrap-reverse;
   }
 
   .search-div {
@@ -128,7 +132,7 @@ $input-border-radius: 4px;
 
   .filter-dropdown {
     select {
-      padding: 0.7rem 2.4rem;
+      padding: 0.7rem 3rem;
       border-radius: $input-border-radius;
       background-color: #f0f2f3;
       @extend %input-styles;
@@ -141,13 +145,50 @@ $input-border-radius: 4px;
     }
   }
 
+  // .date-filters {
+  //   display: flex;
+  //   align-items: center;
+  //   @extend %input-styles;
+
+  //   span {
+  //     display: inline-block;
+  //     margin: 0 0rem;
+  //   }
+
+  //   form {
+  //     position: relative;
+  //     margin-right: 0.5rem;
+  //     @extend %input-styles;
+
+  //     &:last-child {
+  //       margin-right: 0;
+  //     }
+
+  //     input {
+  //       @extend %input-styles;
+  //       width: 10rem;
+  //       padding-right: 2.5rem;
+  //       padding-left: 2.5rem;
+  //     }
+
+  //     .calendar-icon {
+  //       position: absolute;
+  //       left: 0.5rem;
+  //       top: 50%;
+  //       transform: translateY(-50%);
+  //     }
+  //   }
+  // }
+
   .date-filters {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 
     span {
       display: inline-block;
-      margin: 0 0.5rem;
+      margin: 0 0rem;
+      margin-right: -1.7rem;
     }
 
     form {
@@ -159,7 +200,10 @@ $input-border-radius: 4px;
       }
 
       input {
-        @extend %input-styles;
+        background-color: #f0f2f3; // Adding background color
+        border: 1px solid #f0ecf5; // Adding border
+        padding: 0.7rem 2.4rem; // Adding padding
+        border-radius: 4px;
         width: 10rem;
         padding-right: 2.5rem;
         padding-left: 2.5rem;
