--- a/src/components/modules/admin/login/index.scss
+++ b/src/components/modules/admin/login/index.scss
@@ -6,27 +6,24 @@
 // }
 
 .grid-container-signIn {
-  // display: grid;
-  grid-template-columns: auto auto;
   display: inline-flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  margin-left: 60px;
+  max-width: 100%;
+  margin: 0;
   background-color: white;
-  margin-right: -5rem;
 
   .container-images {
     position: relative;
     height: 824px;
-    width: 1000px;
+    width: 800px;
     background-color: #00b8bf0d;
-    margin-right: 62rem;
-
+    margin-left: 200px;
     .big-image {
       width: 500px;
       height: 100%;
       position: absolute;
-      top: 85px;
+      top: 95px;
       left: -100px;
       z-index: 10;
 
@@ -49,7 +46,7 @@
       position: absolute;
       right: 0;
       height: 320px;
-      width: 490px;
+      width: 550px;
       top: 350px;
       left: -20px;
       border-radius: 10px;
@@ -57,10 +54,10 @@
 
     .third-image {
       position: absolute;
-      top: 19px;
+      top: 35px;
       height: 240px;
       width: 195px;
-      left: 255px;
+      left: 253px;
     }
 
     .fourth-image {
@@ -88,9 +85,9 @@
 
 .form-tables {
   background-color: white;
-  margin-top: -270px;
+  margin-top: -250px;
   height: 70vh;
-  width: 50%;
+  width: 55%;
   display: grid;
   gap: 20px;
   margin-left: 10px;
@@ -106,28 +103,24 @@
     height: 40%;
     margin-left: 30px;
 
-    span {
-      font-size: 20px;
-      font-family: 'Inter', sans-serif;
-      font-weight: 500;
-      margin-right: 55px;
-      background-color: white;
-    }
-
     .logoImage {
       width: 180px;
       height: 44px;
+      margin-left: 30px;
     }
 
     .admins {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Inter';
       font-weight: 500;
       font-size: 22px;
+      text-align: -70px;
+      margin-right: -90px;
+      background: white;
     }
   }
 
   .form-propers {
-    margin-left: 90px;
+    margin-left: 120px;
     margin-top: -20px;
     background-color: white;
     height: 40vh;
@@ -143,48 +136,52 @@
 
     .bongus {
       margin: 20px 0;
-      background-color: #f4f4f6;
+      // background-color: #f4f4f6;
       border-radius: 4px;
       border: 1px transparent;
+    }
 
-      .label {
-        color: #000;
-        font-family: 'Inter', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: -0.16px;
-      }
+    .label {
+      color: #000;
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: -0.16px;
+    }
 
-      .bolala {
-        color: grey;
-        width: 450px;
-        height: 48px;
-        display: flex;
-        font-family: 'Lato', sans-serif;
-        line-height: 24px;
-        letter-spacing: -0.16px;
-        border: 1px transparent;
-        background-color: #f4f4f6;
-        border-radius: 6px;
+    .bolala {
+      color: grey;
+      width: 450px;
+      height: 48px;
+      display: flex;
+      font-family: 'Lato', sans-serif;
+      line-height: 24px;
+      letter-spacing: -0.16px;
+      border: 1px transparent;
+      background-color: #f4f4f6;
+      border-radius: 6px;
+      position: relative;
+    }
 
-        &::placeholder {
-          font-family: 'Inter', sans-serif;
-          font-size: 14px;
-          font-weight: 400;
-          padding-left: 16px;
-          padding-top: 15px;
-        }
-      }
+    .bolala::placeholder {
+      font-family: 'Inter', sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      padding-left: 16px;
+      padding-top: 15px;
     }
 
     .passwordimg {
-      margin-top: -120px;
-      margin-left: 415px;
+      position: absolute;
+      top: 45%;
+      transform: translateY(-50%);
+      left: 538px;
+      z-index: 1;
     }
 
     .button-cta {
-      margin-top: 10px;
+      margin-top: 65px;
       display: flex;
       width: 450px;
       height: 44px;
