fixed styling issue on login page

--- a/src/components/modules/admin/login/index.scss
+++ b/src/components/modules/admin/login/index.scss
@@ -162,6 +162,7 @@
       background-color: #f4f4f6;
       border-radius: 6px;
       position: relative;
+      padding-left: 1rem;
     }
 
     .bolala::placeholder {
